<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_board_white"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:theme="@style/Acumen360.Spinner"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColorHint="@color/acumen360_blue_dark"
            app:boxStrokeColor="@color/acumen360_blue_dark"
            app:endIconTint="@color/acumen360_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text"
                android:shadowColor="@color/black"
                android:text="venkataakhiln@hnsonline.com"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColorHint="@color/acumen360_blue_dark"
            app:boxStrokeColor="@color/acumen360_blue_dark"
            app:boxStrokeErrorColor="@color/acumen360_blue"
            app:endIconTint="@color/acumen360_blue_dark"
            app:errorEnabled="true"
            app:errorTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_username"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/EditInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:shadowColor="@color/black"
                android:text="akhil@123"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_remember_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_remember_me" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@color/acumen360_blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom" />


</androidx.constraintlayout.widget.ConstraintLayout>