<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/light_gray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1_menu_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_user"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_user"
        app:civ_border_color="@color/text_black"
        app:civ_border_overlay="true"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="#12603838"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toBottomOf="@+id/guide1_top" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toTopOf="@+id/iv_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:text="-"
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view_step_1"
        app:layout_constraintEnd_toEndOf="@+id/guide1_end"
        app:layout_constraintVertical_bias="0.473" />
    <!--android:background="@drawable/rounded_logout"-->

    <View
        android:id="@+id/view_step_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha="0.3"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/guide1_end"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toBottomOf="@+id/iv_user" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llc_profile_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/guide_mid"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toBottomOf="@+id/view_step_1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/profile"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:text=":"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_profile_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_weight="1.8"
                android:gravity="center_vertical"
                android:text="-" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/product"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center_vertical"
                android:text=":"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/sp_product"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1.9"
                android:gravity="center_vertical"
                android:theme="@style/Acumen360.Spinner" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view_step_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha="0.3"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/guide1_end"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toBottomOf="@+id/llc_profile_service" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_voice_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="@id/guide_mid"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toBottomOf="@+id/view_step_3">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Voice"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text=":"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_voice_list"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1.9"
            android:entries="@array/voice_list"
            android:gravity="center_vertical"
            android:theme="@style/Acumen360.Spinner" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:id="@+id/view_step_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha="0.3"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/guide1_end"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toBottomOf="@+id/ll_voice_type" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_new_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="#07000000"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@id/guide1_end"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toBottomOf="@+id/view_step_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo_new_chat"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/acumen_icon_blue" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:text="@string/new_chat"
                android:textColor="@color/acumen360_blue_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_logo_new_chat"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginTop="2dp"
                android:tint="@color/acumen360_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_new_chat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat_thread"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_new_chat" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/guide1_bottom"
        app:layout_constraintEnd_toEndOf="@id/guide1_end"
        app:layout_constraintStart_toStartOf="@+id/guide1_start"
        app:layout_constraintTop_toTopOf="@+id/view_step_2">


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>